src/objects/JDE_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>JDE Invoices</relationshipLabel>
        <relationshipName>JDE_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>ProductCode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_Base__c</fullName>
        <label>Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBCF_Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBCF_InvoiceJDECompanyID__c</fullName>
        <label>InvoiceJDECompanyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_Invoice_pdf_path__c</fullName>
        <label>Invoice pdf path</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEAmount__c</fullName>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEBusinessUnitID__c</fullName>
        <label>BusinessUnitID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_JDECurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEDueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEEDICreatedOn__c</fullName>
        <label>JDE EDI Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEEDIOrderNum__c</fullName>
        <label>JDE EDI Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEEndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEGLDateJulian__c</fullName>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEInvoiceAmount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEInvoiceNum__c</fullName>
        <label>InvoiceNum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEInvoiceOpenAmount__c</fullName>
        <label>Invoice Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEInvoiceType__c</fullName>
        <label>InvoiceType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_JDELedgerType__c</fullName>
        <label>Ledger Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEObjectAccount__c</fullName>
        <label>Object Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEPaidStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEPosted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted (Y/N)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEQuoteNumber__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_JDESOInvoiceDate__c</fullName>
        <label>JDE Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBCF_JDESOInvoicedBy__c</fullName>
        <label>JDE Sales Order Invoiced By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_JDESOInvoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JDE Sales Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_JDESalesOrderCompany__c</fullName>
        <label>SalesOrder Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_JDESalesOrderNumber__c</fullName>
        <label>SalesOrder Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_JDESalesOrderType__c</fullName>
        <label>SalesOrder Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_JDEStartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBCF_JDESubObjectAccount__c</fullName>
        <label>SubObject Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>text(ProductCode__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <label>JDE Invoice</label>
    <nameField>
        <label>JDE Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JDE Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>